--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 10px;
   }
 
   .title {
@@ -137,24 +138,139 @@
 }
 
 .amount-div {
-    border: 1px solid var(--slate7);
-    border-radius: 10px;
+    position: relative;
 }
 
 #amount {
-    padding-left: 40px;
+    padding: 10px 10px 10px 50px;
+    margin-top: 10px;
     width: 100%;
     box-sizing: border-box;
     position: relative;
+    background-color: transparent;
+    outline-offset: 0px;
+    border: 1px solid var(--slate7);
+    border-radius: 5px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 #quid {
     position: absolute;
     left: 0px;
-    top: 50%;
+    top: 59%;
     transform: translateY(-50%);
     pointer-events: none; 
     color: var(--slate7);
-    background-color: green;
-    padding: 10px;
+    background-color: var(--slate1);
+    padding: 10px 17px;
+    border-radius: 5px 0 0 5px;
+   font-weight: 800;
+}
+
+#outer-div {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0 20px 0;
+}
+
+.term-div {
+  margin-top: 10px;
+  position: relative;
+  }
+
+  #term {
+    padding: 10px 40px 10px 10px;
+    width: 100%;
+    box-sizing: border-box;
+    position: relative;
+    background-color: transparent;
+    outline-offset: 0px;
+    border: 1px solid var(--slate7);
+    border-radius: 5px;
+  }
+
+#years {
+  position: absolute;
+  right: 1px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; 
+  color: var(--slate7);
+  background-color: var(--slate1);
+  padding: 10px 17px;
+  border-radius: 0 5px 5px 0;
+ font-weight: 800;
+}
+
+.rate-div {
+  margin-top: 10px;
+  position: relative;
+  }
+
+  #rate {
+    padding: 10px 40px 10px 10px;
+    width: 100%;
+    box-sizing: border-box;
+    position: relative;
+    background-color: transparent;
+    outline-offset: 0px;
+    border: 1px solid var(--slate7);
+    border-radius: 5px;
+  }
+
+#perc {
+  position: absolute;
+  right: 1px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; 
+  color: var(--slate7);
+  background-color: var(--slate1);
+  padding: 10px 17px;
+  border-radius: 0 5px 5px 0;
+ font-weight: 800;
+}
+
+#inline-divv {
+  margin-left: 20px;
+  width: 48%;
+}
+
+#inline-div {
+  width: 48%;
+}
+
+.radio-div {
+  margin-top: 10px;
+  padding: 10px;
+  border: 1px solid var(--slate7);
+  border-radius: 5px;
+  font-weight: 800;
+  color: var(--slate9);
+}
+
+.radio-label {
+  padding: 0 0 0 10px;
+}
+
+#submit {
+  margin-top: 30px;
+  background-color: var(--lime);
+  border: 0px;
+  display: flex;
+  padding: 10px 30px 10px 30px;
+  border-radius: 50px;
+  font-weight: 800;
+  font-size: 14px;
+  align-items: center;
+  color: var(--slate9);
+}
+
+#submit-text {
+  padding-left: 10px;
 }
