--- a/styles.css
+++ b/styles.css
@@ -210,18 +210,33 @@
     
 }
 
-#amount {
-    padding: 10px 10px 10px 50px;
-    margin-top: 10px;
-    width: 100%;
-    box-sizing: border-box;
-    position: relative;
-    background-color: transparent;
-    outline-offset: 0px;
-    border: 1px solid var(--slate7);
-    border-radius: 5px;
-    color: var(--slate9);
-    cursor: pointer;
+
+.amount {
+  padding: 10px 10px 10px 50px;
+  margin-top: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  position: relative;
+  background-color: transparent;
+  outline-offset: 0px;
+  border: 1px solid var(--slate7);
+  border-radius: 5px;
+  color: var(--slate9);
+  cursor: pointer;
+}
+
+.amount-err {
+  padding: 10px 10px 10px 50px;
+  margin-top: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  position: relative;
+  background-color: transparent;
+  outline-offset: 0px;
+  border: 1px solid var(--red);
+  border-radius: 5px;
+  color: var(--slate9);
+  cursor: pointer;
 }
 
 input::-webkit-outer-spin-button,
@@ -230,7 +245,14 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-#quid {
+.span {
+  display: none;
+  color: var(--red);
+  font-weight: 500;
+  padding-top: 10px;
+}
+
+.quid {
     position: absolute;
     left: 0px;
     top: 59%;
@@ -243,10 +265,23 @@ input::-webkit-inner-spin-button {
    font-weight: 800;
 }
 
+.quid-err {
+  position: absolute;
+  left: 0px;
+  top: 59%;
+  transform: translateY(-50%);
+  pointer-events: none; 
+  color: white;
+  background-color: var(--red);
+  padding: 10px 17px;
+  border-radius: 5px 0 0 5px;
+ font-weight: 800;
+}
+
 #outer-div {
   display: flex;
   justify-content: space-between;
-  margin: 20px 0 20px 0;
+  margin: 20px 0 0 0;
 }
 
 .term-div {
@@ -255,7 +290,7 @@ input::-webkit-inner-spin-button {
   font-weight: 800;
   }
 
-  #term {
+  .term {
     padding: 10px 40px 10px 10px;
     width: 100%;
     box-sizing: border-box;
@@ -269,7 +304,25 @@ input::-webkit-inner-spin-button {
     z-index: 1;
   }
 
-#years {
+  .term-err {
+    padding: 10px 40px 10px 10px;
+    width: 100%;
+    box-sizing: border-box;
+    position: relative;
+    background-color: transparent;
+    outline-offset: 0px;
+    border: 1px solid var(--red);
+    border-radius: 5px;
+    color: var(--slate9);
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  #term-span {
+    margin-bottom: 20px;
+  }
+
+.years {
   position: absolute;
   right: 1px;
   top: 50%;
@@ -282,13 +335,26 @@ input::-webkit-inner-spin-button {
  font-weight: 800;
 }
 
+.years-err {
+  position: absolute;
+  right: 1px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; 
+  color: white;
+  background-color: var(--red);
+  padding: 10px 17px;
+  border-radius: 0 5px 5px 0;
+ font-weight: 800;
+}
+
 .rate-div {
   margin-top: 10px;
   position: relative;
   font-weight: 800;
   }
 
-  #rate {
+  .rate {
     padding: 10px 40px 10px 10px;
     width: 100%;
     box-sizing: border-box;
@@ -302,7 +368,22 @@ input::-webkit-inner-spin-button {
     z-index: 1;
   }
 
-#perc {
+  .rate-err {
+    padding: 10px 40px 10px 10px;
+    width: 100%;
+    box-sizing: border-box;
+    position: relative;
+    background-color: transparent;
+    outline-offset: 0px;
+    border: 1px solid var(--red);
+    border-radius: 5px;
+    color: var(--slate9);
+    cursor: pointer;
+    z-index: 1;
+  }
+
+
+.perc {
   position: absolute;
   right: 1px;
   top: 50%;
@@ -310,6 +391,19 @@ input::-webkit-inner-spin-button {
   pointer-events: none; 
   color: var(--slate7);
   background-color: var(--slate1);
+  padding: 10px 17px;
+  border-radius: 0 5px 5px 0;
+ font-weight: 800;
+}
+
+.perc-err {
+  position: absolute;
+  right: 1px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; 
+  color: white;
+  background-color: var(--red);
   padding: 10px 17px;
   border-radius: 0 5px 5px 0;
  font-weight: 800;
